[package]
name = "persistentwin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "1.3"

[dependencies]
nwg = {version = "^1.0.12", package = "native-windows-gui", features = ["high-dpi", "no-styling"]}
nwd = {version = "^1.0.5", package = "native-windows-derive"}
log = "0.4.17"
rusqlite = { version = "0.28.0", features = ["bundled"] }
anyhow = { version = "1.0.65", features = ["backtrace"] }
bson = "2.4.0"
serde = { version = "1.0.144", features = ["derive"] }
env_logger = "0.9.1"

[dependencies.windows]
version = "0.39.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
]
